--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,32 @@ body {
     padding: 63px 0px;
 }
 
+.target{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: inherit;
+  font-size: 3.5rem;
+  color: black;
+  text-transform: uppercase;
+  cursor: help;
+  font-weight: 400;
+  border: 3px solid black;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 33px 25px;
+  border-radius: 50rem;
+  top: 10rem;
+}
+
+.target-title{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: inherit;
+  font-size: 3.5rem;
+  color: black;
+  text-transform: uppercase;
+  cursor: help;
+  font-weight: 400;
+  top: 5rem;
+}
