--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
   height: 100%;
   background-color: #e6e1e1;
   text-align: center;
-  padding: 100px;
+  padding: 120px;
 }
 
 .player_name{
@@ -128,6 +128,10 @@ body {
 }
 
 .btn_new_game {
-  left: 10rem;
-  top: 2rem;
+  left: 12rem;
+  top: 3rem;
+}
+
+.hidden{
+  display: none;
 }
